--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Salman Tariq Mirza",
   "dependencies": {
     "express": "^4.14.0",
+    "lodash": "^4.17.4",
     "materialize-css": "^0.97.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
